# vitulus_description

./: CMakeLists.txt  README.md  package.xml
launch/: vitulus4wd.launch
meshes/: t265.dae
rviz/: model.rviz
urdf/: _d435.urdf.xacro  _usb_plug.urdf.xacro  macros.xacro  vitulus4WD_description.urdf.xacro
